# pipert

./: .gitignore  AdaptiveSpinLock_8cpp.html  AdaptiveSpinLock_8cpp_source.html  AdaptiveSpinLock_8h.html  AdaptiveSpinLock_8h_source.html  CMakeLists.txt  ChannelBase_8cpp.html  ChannelBase_8cpp_source.html  ChannelBase_8h.html  ChannelBase_8h_source.html  ChannelImpl_8cpp.html  ChannelImpl_8cpp_source.html  ChannelImpl_8h.html  ChannelImpl_8h_source.html  Channel_8h.html  Channel_8h_source.html  Doxyfile  Endianness_8cpp.html  Endianness_8cpp.js  Endianness_8cpp_source.html  Endianness_8h.html  Endianness_8h.js  Endianness_8h_source.html  LogAggregate_8cpp.html  LogAggregate_8cpp_source.html  LogAggregate_8h.html  LogAggregate_8h_source.html  LogEventBase_8h.html  LogEventBase_8h_source.html  LogEventTypeRegistrar_8cpp.html  LogEventTypeRegistrar_8cpp_source.html  LogEventTypeRegistrar_8h.html  LogEventTypeRegistrar_8h_source.html  LogEvent_8h.html  LogEvent_8h_source.html  NetworkPacket_8h.html  NetworkPacket_8h_source.html  PacketBase_8h.html  PacketBase_8h_source.html  PacketStub_8h.html  (+226 more)
.github/workflows/: main.yml
MonitoringProfilingServer/: server.cpp
demo/: CMakeLists.txt  join.cpp  main.cpp  main2.cpp  main_yolo.cpp
include/pipert/: Channel.h  ChannelBase.h  ChannelImp.h  JoinChannel.h  LogEvent.h  LogEventBase.h  LogEventTypeRegistrar.h  MeasurementEvent.h  MeasurementProfile.h  MeasurementProfileBase.h  MeasurmentBuffer.h  NetworkPacket.h  Packet.h  PacketBase.h  PacketStub.h  PacketToFill.h  PacketToProcess.h  PolledChannel.h  Profiler.h  Protocol.h  Receiver.h  ReceiverBase.h  ReceiverChannel.h  ScheduledChannel.h  Scheduler.h  SchedulerImp.h  SchedulerImpl.h  SenderChannel.h  Timer.h  UDPConnection.h  UserMeasurementProfile.h
include/pipert/src/: IChannel.h  IJoinChannel.h  IPacket.h  IScheduler.h  PacketImp.h
lib/: index.js
log_analyzer/: analyzer_server.py  application.py  channel.py  channel_manager.py  checkers_getter.py  checkers_manager.py  config.json  config_reader.py  endianess_converter.py  event.py  frozen_checker.py  measurements_checker.py  packet.py  packet_decoder.py  packets_manager.py  requirements.txt  start.py
log_analyzer/checkers/: drop_rate_checker.py  drop_ratio_checker.py  frozen_checker.py
log_analyzer/src/: analyzer_server.py  application.py  channel.py  channel_calc.py  channel_manager.py  checkers_getter.py  checkers_manager.py  config_reader.py  constants.py  endianess_converter.py  event.py  module_getter.py  packet.py  packet_decoder.py  packets_manager.py  pipeline_calc.py  start.py  utils.py
log_analyzer/src/checkers/: base_checker.py  drop_rate_checker.py  drop_ratio_checker.py  execution_time_checker.py  fill_time_checker.py  frozen_checker.py  read_time_checker.py  time_to_buffer_average_checker.py
log_analyzer/src/checkers/test/: drop_rate_checker_test.py  drop_ratio_checker_test.py  execution_time_checker_test.py  frozen_checker_test.py
log_analyzer/src/controllers/: channels_manager.py  checkers_manager.py  measurement_manager.py  packets_manager.py
log_analyzer/src/gui/: application.py
log_analyzer/src/gui/templates/: base.html
log_analyzer/src/measurements/: base_measurement.py
log_analyzer/src/measurements/channel_measurements/: drop_rate_measurement.py  (+8 more)
log_analyzer/src/templates/: base.html  index.html  measurements.html  settings.html  stats.html
log_analyzer/src/test/: analyzer_server_test.py  channel_calc_test.py  channel_test.py  module_getter_test.py  packet_decoder_test.py  packet_manager_test.py  packet_test.py  utils_test.py
log_analyzer/static/js/: application.js
log_analyzer/templates/: index.html
log_analyzer/test/: channel_test.py  channels_manager_test.py  checkers_manager_test.py  drop_rate_checker_test.py  drop_ratio_measurement_test.py  endianess_converter_test.py  event_test.py  execution_time_checker_test.py  execution_time_measurement_test.py  frozen_checker_test.py  packet_decoder_test.py  packets_manager_test.py  utils_test.py
pipert/: CMakeLists.txt
pipert/include/: Scheduler.h  Timer.h
pipert/src/: ChannelBase.cpp  ChannelBase.h  ChannelImp.h  JoinChannelImp.h  PacketImp.h  SchedulerImp.cpp  StatefulJoinChannelImp.h  StatelessJoinChannelImp.h
profiler_measurements/: CMakeLists.txt  MeasurementsRunner.cpp  channelFreezeScenario.h  highDroppingRateScenario.h  longDelayChannelScenario.h  utils.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  (+32 more)
src/: AdaptiveSpinLock.cpp  AdaptiveSpinLock.h  ChannelBase.cpp  ChannelBase.h  ChannelImp.h  ChannelImpl.cpp  ChannelImpl.h  Endianness.cpp  Endianness.h  JoinChannelImp.h  LogAggregate.cpp  LogAggregate.h  LogEvent.cpp  LogEventTypeRegistrar.cpp  PacketImp.cpp  PacketImp.h  ProfileData.cpp  ProfileData.h  Profiler.cpp  ProfilerImpl.cpp  ProfilerImpl.h  Protocol.cpp  Scheduler.cpp  SchedulerImp.cpp  SchedulerImp.h  SchedulerImpl.cpp  SchedulerImpl.h  SenderLogger.cpp  SenderLogger.h  StatefulChannelImp.h  StatefulJoinChannelImp.h  StatelessChannelImp.h  StatelessJoinChannelImp.h  SteadyHeap.h  ThreadId.cpp  ThreadId.h  Timer.cpp  UDPConnection.cpp  UDPConnection.h  addon.cc
test/: AdaptiveSpinLockTest.cpp  CMakeLists.txt  EndiannessTest.cpp  LogAggregateTest.cpp  LogEventTest.cpp  MeasurementBufferTest.cpp  MeasurementEventTest.cpp  MeasurementProfileTest.cpp  PacketImp_test.cpp  PacketTest.cpp  PolledChannelTest.cpp  ProfileDataTest.cpp  ProfilerImplTest.cpp  ProfilerTest.cpp  ScheduledChannelTest.cpp  SchedulerNProfilerTest.cpp  SchedulerTest.cpp  SenderLoggerTest.cpp  StateSchedulingTest.cpp  SteadyHeapTest.cpp  ThreadIdTest.cpp  TimerTest.cpp  UDPConnectionTest.cpp  UserMeasurementTest.cpp
(+16 files in other folders)
